@@ -25,9 +25,9 @@ export default class Operation extends Reactive {
     this.prop('ro', 'api', params.api);
     this.prop('ro', 'defaultParams', params.defaultParams || {});
     this.prop('ro', 'id', params.id);
-    this.prop('ro', 'req', {body: null, headers: {}});
-    this.prop('ro', 'res', {body: {}, headers: {}});
     this.prop('rw', 'err', null);
+    this.prop('rw', 'req', {body: null, headers: {}});
+    this.prop('rw', 'res', {body: {}, headers: {}});
     this.prop('rw', 'status', 'pending');
   }
 
@@ -70,26 +70,32 @@ export default class Operation extends Reactive {
    * @returns {Promise} The promise will be resolved on error and success.
    */
   perform(params) {
+    let xhr;
     // this._promise is used as a locking mechanism so you can only call perform() once
-    return this._promise || (this._promise = new Promise(resolve => {
-      this.api.spec(this.id).then(opSpec => {
-        if (!opSpec) throw 'Unknown operationId "' + this.id + '".';
+    return this._promise || (this._promise = this.api.spec(this.id).then(opSpec => {
+      if (!opSpec) throw 'Unknown operationId "' + this.id + '".';
+      const req = this._paramsToRequest(opSpec, params || this.defaultParams);
+      xhr = new XMLHttpRequest();
+      this.update({req, status: 'loading'});
+      return this._send(xhr, req);
+    }).then(() => {
+      const res = {};
+      res.body = xhr.response ? JSON.parse(xhr.response) : {};
+      res.headers = (xhr.getAllResponseHeaders() || '').trim().split(/[\r\n]+/).map(h => h.split(/:\s*/, 2));
+      res.status = xhr.status || '201';
 
-        const [url, req] = this._paramsToRequest(opSpec, params || this.defaultParams);
-        if (!url) throw req;
+      let err = null;
+      if (!String(res.status).match(/^[23]/)) {
+        err = body && res.body.errors ? res.body.errors : [{message: xhr.statusText || 'Unknown error.'}];
+      }
 
-        this.update({status: 'loading'});
-        if (is.object(req.body) && !is.function(req.body.has)) req.body = JSON.stringify(req.body);
-        return fetch(url, req);
-      }).then(res => {
-        return Promise.all([res, res.json()]);
-      }).then(([res, json]) => {
-        delete this._promise;
-        resolve(this.parse(res, json));
-      }).catch(err => {
-        delete this._promise;
-        resolve(this.error(Array.isArray(err) ? err : 'Failed fetching operationId "' + this.id + '": ' + err, 'fetch'));
-      });
+      return this.update({err, res, status: err ? 'error' : 'success'});
+    }).catch(err => {
+      if (err.type) err = err.type;
+      console.error(this.req.url + ' FAILED ' + err);
+      return this.error(Array.isArray(err) ? err : 'Failed fetching operationId "' + this.id + '": ' + err, 'fetch');
+    }).finally(() => {
+      delete this._promise;
     }));
   }
 
@@ -102,25 +108,6 @@ export default class Operation extends Reactive {
    */
   is(status) {
     return this.status == status;
-  }
-
-  /**
-   * Used to parse a response body
-   *
-   * @param {Response} res
-   * @param {Object} body
-   */
-  parse(res, body = res.body) {
-    this.res.body = body || res;
-    this.res.status = res.status || '201';
-    if (res.headers) this.res.headers = res.headers;
-
-    let err = null;
-    if (!String(this.res.status).match(/^[23]/)) {
-      err = body && body.errors ? body.errors : [{message: res.statusText || 'Unknown error.'}];
-    }
-
-    return this.update({err, status: err ? 'error' : 'success'});
   }
 
   /**
@@ -146,8 +133,8 @@ export default class Operation extends Reactive {
   }
 
   _paramsToRequest(opSpec, params) {
-    const fetchParams = {headers: this.req.headers, method: opSpec.method};
     const url = new URL(opSpec.url);
+    const req = {headers: this.req.headers, method: opSpec.method.toLowerCase(), url};
     const errors = [];
 
     (opSpec.parameters || []).forEach(p => {
@@ -165,20 +152,42 @@ export default class Operation extends Reactive {
         url.searchParams.set(p.name, this._extractValue(params, p));
       }
       else if (p.in == 'formData') {
-        delete fetchParams.headers['Content-Type']; // Set by fetch()
-        fetchParams.body = params.formData;
+        delete req.headers['Content-Type'];
+        req.body = params.formData;
       }
       else if (p.in == 'body') {
-        fetchParams.body = this._extractValue(params, p);
+        req.body = this._extractValue(params, p);
       }
       else if (p.in == 'header') {
-        fetchParams.header[p.name] = this._extractValue(params, p.name);
+        req.header[p.name] = this._extractValue(params, p.name);
       }
       else {
         throw '[Api] Parameter in:' + p.in + ' is not supported.';
       }
     });
 
-    return errors.length ? [null, errors] : [url, fetchParams];
+    if (errors.length) throw errors;
+    return req;
+  }
+
+  _send(xhr, req) {
+    // Have to use XMLHttpRequest, since fetch() does not seem to support "progress" event
+    xhr.timeout = 15000; // TODO: Is this a good value?
+    xhr.open(req.method.toUpperCase(), req.url);
+    Object.keys(req.headers).forEach(k => xhr.setRequestHeader(k, req.headers[k]));
+
+    if (req.method == 'post') {
+      xhr.upload.addEventListener('progress', e => this.emit('progress', e));
+      xhr.send(is.object(req.body) && !is.function(req.body.has) ? JSON.stringify(req.body) : req.body);
+    }
+    else {
+      xhr.send();
+    }
+
+    return new Promise(resolve => {
+      xhr.addEventListener('abort', resolve);
+      xhr.addEventListener('error', resolve);
+      xhr.addEventListener('load', resolve);
+    });
   }
 }
